refactor: changed Use Cases and Exceptions implementations and Exceptions aswell, to fit SOLID/Clean Code patterns.